[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
django-allauth = "^0.45.0"
django-email-verification = "^0.1.0"
django-crispy-forms = "^1.12.0"
Pillow = "^8.3.1"
[tool.poetry.dev-dependencies]
